# ROGII_Kaggle_Competitions

./: .env.example  .gitattributes  .gitignore  00-rogii-inference-a4-v2.ipynb  AGENTS.md  README.md  ROGII_PROJECT_INTAKE_DOSSIER.md  dataset-metadata.json  pyproject.toml  pytest.ini  requirements.txt
.opencode/: opencode.json
configs/: a2_lgbm.yaml  a4_multiseed.yaml  a4_stratified.yaml  a5_tcn.yaml  b1_lgbm.yaml  b2_lgbm.yaml  b3_lgbm.yaml  b4_baseline.yaml  b4_best_params.yaml  b4_tuned.yaml  baseline_lgbm.yaml  baseline_naive.yaml  paths.kaggle.yaml  paths.local.yaml.example
docs/: ARCHITECTURE.md  BASELINE_PLAN.md  CHANGELOG.md  CONTEXT_MAP.md  DATA_MAP.md  DECISIONS.md  EXPERIMENT_LOG.md  HOW_IT_WORKS.md  KNOWN_ISSUES.md  METRICS.md  PROJECT_CONTEXT.md  PUBLIC_NOTEBOOK_REFERENCES.md  REVIEW_CHECKLIST.md  ROADMAP.md  TASKS.md  TASK_TEMPLATE.md  VALIDATION_STRATEGY.md
notebooks/: 00_kaggle_inference.ipynb  00_kaggle_thin_runner.ipynb  01_data_map_eda.ipynb  01_kaggle_train.ipynb  02_kaggle_update_repo.ipynb  kaggle_a2a.ipynb  kernel-metadata.json
scripts/: diagnose_tcn.py  eval_pop2_oof.py  inspect_tvt_range.py  kaggle_offline_inference.py  kaggle_runner.py  make_data_inventory.py  run_naive_baseline.py  run_predict.py  run_smoke.py  run_train.py  run_tune.py  tune_tcn.py  validate_submission.py  visualize_postproc.py
steps/: 01_AGENT_PROMPT.md  02_AGENT_PROMPT.md  03_AGENT_PROMPT.md  04_AGENT_PROMPT.md  05_AGENT_PROMPT.md  06_AGENT_PROMPT.md  07_AGENT_PROMPT.md  08_AGENT_PROMPT.md  09_AGENT_PROMPT.md  10_AGENT_PROMPT.md  11_AGENT_PROMPT.md
(+75 files in other folders)
