[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rogii-kaggle-competitions"
version = "0.1.0"
description = "Reproducible Kaggle baseline for ROGII wellbore geology prediction"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
